--- a/intro.qmd
+++ b/intro.qmd
@@ -10,9 +10,9 @@ To begin with we introduce some key terminology.
 ## Discrete v continuous time
 
 
-### Differential equation
+### Differential equations
 
-Let $t$ be a continuous variable and $x=x(t)$. Consider the ODE
+Let $t$ be a continuous variable and $x=x(t)$. Consider the ordinary differential equation (ODE)
 $$
 \dot{x}=rx(1-x).
 $$ {#eq-logdemo}
@@ -27,6 +27,23 @@ Similarly, the second order derivative is represented by
 \ddot{x}:=\frac{d^2x}{dt^2}.
 $$
 
+Many of the  second order ODE problems that we will examine originate from Newton's Second Law, i.e.
+
+$$
+m\ddot{x}=F(x)
+$$
+where $x(t)$ represents the position of a particle at time, $t$, $m$ represents a constant particle mass and $F$ a resultant force.
+
+Consider the case in which $F$ represents a linear restoring force, i.e.
+$$
+F(x)=-kx.
+$$
+The equation of motion can be written as 
+$$
+\ddot{x}=-\mu x,
+$$
+where $\mu=-k/m$.
+
 
 ### Difference equations
 
@@ -34,7 +51,138 @@ Suppose that $n$ is a discrete variable. Let $y_n$ represent a dependent variabl
 $$
 y_{n+1}=ry_n(1-y_n),
 $$
-where $r \in \Re$.
+where $r\in \Re$.
+
+See this [link](https://dundeemath.github.io/Admissions/posts/RecurrenceRelations.html) for exploration of model solutions.
+
+::: {#fig-logisticmodel}
+
+```{shinylive-python}
+#| standalone: true
+#| components: [viewer]
+#| viewerHeight: 500
+
+from shiny import App, Inputs, Outputs, Session, render, ui
+from shiny import reactive
+
+import numpy as np
+from pathlib import Path
+import matplotlib.pyplot as plt
+from scipy.integrate import odeint
+
+app_ui = ui.page_fluid(
+    ui.layout_sidebar(
+        ui.sidebar(
+    ui.input_slider(id="r",label="r",min=0.0,max=5.0,value=0.1,step=0.001),             
+    ui.input_slider(id="u0",label="u_0",min=0.0,max=1.0,value=0.5,step=0.01),
+    ui.input_slider(id="T",label="Number of iterations",min=0.0,max=60.0,value=20.0,step=1.0),
+    ui.input_slider(id="r_range",label="r zoomed",min=0.0,max=4.0,value=[0.0,4.0],step=0.001),
+    ui.input_slider(id="u_range",label="u zoomed",min=0.0,max=1.0,value=[0.0,1.0],step=0.01),
+              
+          
+            ),
+
+        ui.output_plot("plot"),
+    ),
+)
+
+def server(input, output, session):
+    
+    @render.plot
+    def plot():
+        fig, ax = plt.subplots(3,1)
+        #ax.set_ylim([-2, 2])
+        # Filter fata
+        
+        
+        r=float(input.r())
+        u0=float(input.u0())
+        T=int(input.T())
+        r_min=float(input.r_range()[0])
+        r_max=float(input.r_range()[1])
+        u_min=float(input.u_range()[0])
+        u_max=float(input.u_range()[1])
+
+
+        # Define rhs of logistic map 
+        def logistic_map(y,t,r):
+          rhs=r*y*(1-y)
+          return rhs
+        
+        def DiscreteSol(rhs_pop_model,y_0,t,r):
+            y=np.zeros_like(t,dtype=float)
+            y[0]=y_0
+            for i in t:
+                if i>0:
+
+                    y[i]=rhs_pop_model(y[i-1],t[i],r)
+            return y
+
+        # Define discretised t domain
+        t = np.arange(0, T, 1)
+        # define initial conditions
+        init_cond=u0
+        
+        # Compute numerical solution of ODEs
+        sol1 = DiscreteSol(logistic_map,init_cond,t,r)
+
+        # Plot results
+        y=sol1
+        
+        ax[0].plot(t,y)
+        ax[0].set_xlabel('$n$')
+        ax[0].set_ylabel('$y_n$')
+
+        plt.grid()
+
+        # Parameters
+        n_iterations = 1000  # total iterations for each value of r
+        n_last = 100         # number of iterations to plot (for steady state)
+        r_values = np.linspace(0.0, 4.0, 10000)  # range of r values
+        u0 = 0.5  # initial population (seed)
+
+        delta=0.25
+        #r_min=r-delta
+        #r_max=r+delta
+
+        r_values2 = np.linspace(r_min, r_max, 10000)  # range of r values
+
+        # Initialize plot
+        x = np.full_like(r_values, u0)
+        x2 = np.full_like(r_values2, u0)
+
+        # Iterate and plot bifurcation diagram
+         
+        for _ in range(n_iterations):
+            x = r_values * x * (1 - x)  # logistic map function
+            x2 = r_values2 * x2 * (1 - x2)  # logistic map function
+
+            if _ >= (n_iterations - n_last):  # plot only steady state
+                ax[1].plot(r_values, x, ',k', alpha=0.25)
+                ax[1].plot([r,r],[0,1],'r--')
+                ax[2].plot(r_values2, x2, ',k', alpha=0.25)
+                ax[2].plot([r,r],[0,1],'r--')
+
+            # Labels and display
+            ax[1].set_title("Bifurcation Diagram")
+            ax[1].set_xlabel("$r$")
+            ax[1].set_ylabel("$y^*$")
+            ax[2].set_title("Bifurcation Diagram (zoomed in) ")
+            ax[2].set_xlabel("$r$")
+            ax[2].set_ylabel("$y^*$")
+            ax[2].set_xlim([r_min,r_max])
+            ax[2].set_ylim([u_min,u_max])
+
+
+
+        plt.show()
+    
+app = App(app_ui, server)
+```
+:::
+
+
+
 
 ### Key questions
 
